--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dependencies": {
         "@google/generative-ai": "0.21.0",
         "axios": "1.9.0",
+        "buffer": "^6.0.3",
         "lucide-react": "^0.525.0",
         "mammoth": "^1.9.1",
         "next": "latest",
