--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "@types/node": "^20.0.0",
         "@types/react": "^19.0.0",
         "@types/react-dom": "^19.0.0",
+        "patch-package": "^8.0.0",
         "tailwindcss": "^4.0.0",
         "typescript": "^5.0.0"
     },
