--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
         "dev": "next dev --turbopack",
         "build": "next build",
         "start": "next start",
-        "lint": "next lint",
-        "postinstall": "patch-package"
+        "lint": "next lint"
     },
     "dependencies": {
         "@google/generative-ai": "0.21.0",
@@ -16,11 +15,11 @@
         "buffer": "^6.0.3",
         "lucide-react": "^0.525.0",
         "mammoth": "^1.9.1",
-        "next": "latest",
+        "next": "^15.4.1",
         "pdf-parse": "^1.1.1",
         "pdf2pic": "3.2.0",
         "pdfjs-dist": "^5.3.93",
-        "react": "^19.0.0",
+        "react": "^19.1.0",
         "react-dom": "^19.0.0",
         "tesseract.js": "^4.0.2"
     },
@@ -29,7 +28,6 @@
         "@types/node": "^20.0.0",
         "@types/react": "^19.0.0",
         "@types/react-dom": "^19.0.0",
-        "patch-package": "^8.0.0",
         "tailwindcss": "^4.0.0",
         "typescript": "^5.0.0"
     },
